--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Service
 metadata:
-    name: "kubernetes-a94b"
+    name: "fast-api-sample"
     labels:
-        app: "kubernetes-a94b"
+        app: "fast-api-sample"
 spec:
     type: LoadBalancer
     ports:
@@ -12,4 +12,4 @@ spec:
       protocol: TCP
       name: http
     selector:
-        app: "kubernetes-a94b"
+        app: "fast-api-sample"
