--- a/manifests/deployment.yml
+++ b/manifests/deployment.yml
@@ -1,19 +1,19 @@
 apiVersion : apps/v1
 kind: Deployment
 metadata:
-  name: "kubernetes-a94b"
+  name: "fast-api-sample"
 spec:
   replicas: 2
   selector:
     matchLabels:
-      app: "kubernetes-a94b"
+      app: "fast-api-sample"
   template:
     metadata:
       labels:
-        app: "kubernetes-a94b"
+        app: "fast-api-sample"
     spec:
       containers:
-        - name: "kubernetes-a94b"
-          image: "taethniacr.azurecr.io/kubernetes"
+        - name: "fast-api-sample"
+          image: "taethniacr.azurecr.io/fast-api-sample"
           ports:
           - containerPort: 8080
