--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,11 @@
-fastapi~=0.63.0
+arcgis==1.9.1
+numpy==1.20.3
+pandas==1.3.4
+shapely==1.8.0
+rasterio==1.2.10
+rasterstats==0.16.0
+fuzzywuzzy==0.18.0
+fastapi==0.75.0
+starlette==0.17.1
 pydantic~=1.7.3
 uvicorn~=0.13.3
