--- a/manifests/service.yml
+++ b/manifests/service.yml
@@ -5,7 +5,7 @@ metadata:
     labels:
         app: "fast-api-sample"
 spec:
-    type: LoadBalancer
+    type: ClusterIP
     ports:
     - port: 8080
       targetPort: 8080
