--- a/autoscale.yaml
+++ b/autoscale.yaml
@@ -1,12 +1,12 @@
 apiVersion: autoscaling/v1
 kind: HorizontalPodAutoscaler
 metadata:
-  name: kf-api-hpa
+  name: fast-api-sample-hpa
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
     kind: Deployment
-    name: kf-api
+    name: fast-api-sample
   minReplicas: 1
   maxReplicas: 10
   targetCPUUtilizationPercentage: 50
