--- a/.github/workflows/deploytoAksCluster.yml
+++ b/.github/workflows/deploytoAksCluster.yml
@@ -19,8 +19,8 @@ jobs:
     - name: Build and push image to ACR
       id: build-image
       run: |
-        docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t taethniacr.azurecr.io/kubernetes:${{ github.sha }} --label dockerfile-path=Dockerfile
-        docker push taethniacr.azurecr.io/kubernetes:${{ github.sha }}
+        docker build "$GITHUB_WORKSPACE/" -f  "Dockerfile" -t taethniacr.azurecr.io/fast-api-sample:${{ github.sha }} --label dockerfile-path=Dockerfile
+        docker push taethniacr.azurecr.io/fast-api-sample:${{ github.sha }}
     
     - uses: azure/k8s-set-context@v1
       with:
